java/versioned_docs/version-1.17/api/class-apirequest.mdx
---
id: class-apirequest
title: "APIRequest"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Exposes API that can be used for the Web API testing.


- [APIRequest.newContext([options])](./api/class-apirequest.mdx#api-request-new-context)

## APIRequest.newContext([options]) {#api-request-new-context}
- `options` &#60;`ApiRequest.NewContextOptions`&#62;
  - `setBaseURL`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-base-url"/> &#60;[String]&#62; Methods like [APIRequestContext.get(url[, options])](./api/class-apirequestcontext.mdx#api-request-context-get) take the base URL into consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#api-request-new-context-option-base-url" class="list-anchor">#</a>
    * baseURL: `http://localhost:3000` and sending request to `/bar.html` results in `http://localhost:3000/bar.html`
    * baseURL: `http://localhost:3000/foo/` and sending request to `./bar.html` results in `http://localhost:3000/foo/bar.html`
  - `setExtraHTTPHeaders`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-extra-http-headers"/> &#60;[Map]<[String], [String]>&#62; An object containing additional HTTP headers to be sent with every request.<a href="#api-request-new-context-option-extra-http-headers" class="list-anchor">#</a>
  - `setHttpCredentials`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-http-credentials"/> &#60;HttpCredentials&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#api-request-new-context-option-http-credentials" class="list-anchor">#</a>
    - `setUsername` &#60;[String]&#62;
    - `setPassword` &#60;[String]&#62;
  - `setIgnoreHTTPSErrors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-ignore-https-errors"/> &#60;[boolean]&#62; Whether to ignore HTTPS errors when sending network requests. Defaults to `false`.<a href="#api-request-new-context-option-ignore-https-errors" class="list-anchor">#</a>
  - `setProxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-proxy"/> &#60;Proxy&#62; Network proxy settings.<a href="#api-request-new-context-option-proxy" class="list-anchor">#</a>
    - `setServer` &#60;[String]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
    - `setBypass` &#60;[String]&#62; Optional comma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
    - `setUsername` &#60;[String]&#62; Optional username to use if HTTP proxy requires authentication.
    - `setPassword` &#60;[String]&#62; Optional password to use if HTTP proxy requires authentication.
  - `setStorageState`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-storage-state"/> &#60;[String]&#62; Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [BrowserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state) or [APIRequestContext.storageState([options])](./api/class-apirequestcontext.mdx#api-request-context-storage-state). Either a path to the file with saved storage, or the value returned by one of [BrowserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state) or [APIRequestContext.storageState([options])](./api/class-apirequestcontext.mdx#api-request-context-storage-state) methods.<a href="#api-request-new-context-option-storage-state" class="list-anchor">#</a>
  - `setStorageStatePath`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-storage-state-path"/> &#60;[Path]&#62; Populates context with given storage state. This option can be used to initialize context with logged-in information obtained via [BrowserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state). Path to the file with saved storage state.<a href="#api-request-new-context-option-storage-state-path" class="list-anchor">#</a>
  - `setTimeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-timeout"/> &#60;[double]&#62; Maximum time in milliseconds to wait for the response. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#api-request-new-context-option-timeout" class="list-anchor">#</a>
  - `setUserAgent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-option-user-agent"/> &#60;[String]&#62; Specific user agent to use in this context.<a href="#api-request-new-context-option-user-agent" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-request-new-context-return"/> &#60;[APIRequestContext]&#62;<a href="#api-request-new-context-return" class="list-anchor">#</a>

Creates new instances of [APIRequestContext].

[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
